--- a/ACM site/css/team.css
+++ b/ACM site/css/team.css
@@ -1,3 +1,10 @@
+
+body{
+    background-image: url(../img/222.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 .service-img {
     border: 2px solid #009ee3;
     position: relative;
