--- a/ACM site/css/owl.carousel.css
+++ b/ACM site/css/owl.carousel.css
@@ -229,3 +229,9 @@
 @keyframes scaleUpTo {
   to { opacity: 0; transform: scale(1.5); }
 }
+
+@media screen and (max-width : 768px){
+  div.owl-buttons {
+    display: none;
+  }
+}
